--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,6 +16,22 @@
         android:theme="@style/Theme.MarketPlaceApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.authentication.verification.VerificationActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.authentication.signup.SignupActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.main.MainActivity"
             android:exported="false">
             <meta-data
@@ -22,7 +39,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.authentication.login.LoginActivity"
             android:exported="false"
             android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
             <meta-data
