--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,5 @@ ext {
     gson_version = '2.10.1'
     gson_converter_version = '2.9.0'
     nav_version = '2.5.3'
+    coroutines_version = '1.3.9'
 }
