--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
 
 
 
