--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,21 @@
         android:theme="@style/Theme.MarketPlaceApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.categoryproducts.CategoryProductsActivity"
+            android:exported="false" android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.notifications.NotificationsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.authentication.verification.VerificationActivity"
             android:exported="false"
             android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
@@ -33,7 +48,8 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.MarketPlaceApp.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
