--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,5 @@ ext {
     gson_converter_version = '2.9.0'
     nav_version = '2.5.3'
     coroutines_version = '1.3.9'
+    glide_version = "4.15.0"
 }
